--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.9.0",
     "food-random-module": "^0.0.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
